#   /$$$$$$   /$$$$$$  /$$   /$$ /$$$$$$$$ /$$$$$$  /$$$$$$
#  /$$__  $$ /$$__  $$| $$$ | $$| $$_____/|_  $$_/ /$$__  $$
# | $$  \__/| $$  \ $$| $$$$| $$| $$        | $$  | $$  \__/
# | $$      | $$  | $$| $$ $$ $$| $$$$$     | $$  | $$ /$$$$
# | $$      | $$  | $$| $$  $$$$| $$__/     | $$  | $$|_  $$
# | $$    $$| $$  | $$| $$\  $$$| $$        | $$  | $$  \ $$
# |  $$$$$$/|  $$$$$$/| $$ \  $$| $$       /$$$$$$|  $$$$$$/
#  \______/  \______/ |__/  \__/|__/      |______/ \______/
cmake_minimum_required(VERSION 3.22)
project(project VERSION 0.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#   /$$$$$$   /$$$$$$  /$$   /$$ /$$$$$$$   /$$$$$$  /$$$$$$$$  /$$$$$$
#  /$$__  $$ /$$__  $$| $$  | $$| $$__  $$ /$$__  $$| $$_____/ /$$__  $$
# | $$  \__/| $$  \ $$| $$  | $$| $$  \ $$| $$  \__/| $$      | $$  \__/
# |  $$$$$$ | $$  | $$| $$  | $$| $$$$$$$/| $$      | $$$$$   |  $$$$$$
#  \____  $$| $$  | $$| $$  | $$| $$__  $$| $$      | $$__/    \____  $$
#  /$$  \ $$| $$  | $$| $$  | $$| $$  \ $$| $$    $$| $$       /$$  \ $$
# |  $$$$$$/|  $$$$$$/|  $$$$$$/| $$  | $$|  $$$$$$/| $$$$$$$$|  $$$$$$/
#  \______/  \______/  \______/ |__/  |__/ \______/ |________/ \______/
file(GLOB_RECURSE SOURCES "src/*.cpp")

#  /$$$$$$$$ /$$$$$$  /$$$$$$$   /$$$$$$  /$$$$$$$$ /$$$$$$$$
# |__  $$__//$$__  $$| $$__  $$ /$$__  $$| $$_____/|__  $$__/
#    | $$  | $$  \ $$| $$  \ $$| $$  \__/| $$         | $$
#    | $$  | $$$$$$$$| $$$$$$$/| $$ /$$$$| $$$$$      | $$
#    | $$  | $$__  $$| $$__  $$| $$|_  $$| $$__/      | $$
#    | $$  | $$  | $$| $$  \ $$| $$  \ $$| $$         | $$
#    | $$  | $$  | $$| $$  | $$|  $$$$$$/| $$$$$$$$   | $$
#    |__/  |__/  |__/|__/  |__/ \______/ |________/   |__/
add_executable(out ${SOURCES})
